# excelx-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/excelx/: Cargo.toml  README.md
crates/excelx-derive/: Cargo.toml
crates/excelx-derive/src/: lib.rs
crates/excelx-derive/tests/ui/: unsupported_type.rs  unsupported_type.stderr
crates/excelx-integration-tests/: Cargo.toml
crates/excelx-integration-tests/tests/: excel_row_derive.rs
crates/excelx/src/: error.rs  lib.rs  read.rs  row.rs  types.rs  write.rs
crates/excelx/tests/: read_write.rs  sheet_reading.rs
