[package]
name = "excelx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Type-safe XLSX read/write helpers for Rust structs."
documentation = "https://docs.rs/excelx"
homepage = "https://github.com/prongbang/excelx-rs"
repository = "https://github.com/prongbang/excelx-rs"
readme = "README.md"
keywords = ["excel", "xlsx", "spreadsheet", "calamine"]
categories = ["encoding", "parser-implementations"]

[dependencies]
calamine = "0.34"
rust_xlsxwriter = "0.94"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"], optional = true }
rust_decimal = { version = "1", features = ["std"], optional = true }

[features]
default = []
# Enables support for `chrono::NaiveDateTime`, `chrono::NaiveDate`, and
# `chrono::NaiveTime` cell values (MySQL DATETIME / TIMESTAMP / DATE / TIME).
chrono = ["dep:chrono"]
# Enables support for `rust_decimal::Decimal` cell values (MySQL DECIMAL).
decimal = ["dep:rust_decimal"]
